Edit tmux key-bindings

--- a/home/.config/tmux/tmux.conf
+++ b/home/.config/tmux/tmux.conf
@@ -1,8 +1,14 @@
 unbind-key -a -T root
 set -g base-index 1
 set -g pane-base-index 1
+set -g renumber-windows on
+
+set -g prefix C-Space
+unbind C-b
+bind C-Space send-prefix
 
 setw -g mode-keys vi
+set -g status-keys vi
 set -g focus-events on
 
 set -g mouse on
@@ -13,7 +19,7 @@ set -g default-terminal "tmux-256color"
 set -ag terminal-overrides ",xterm-256color:RGB"
 
 bind -n M-r source-file ~/.config/tmux/tmux.conf \; display "reloaded"
-bind -n M-s choose-tree -s
+bind -n M-a choose-tree -s
 
 bind -n M-1 select-window -t 1
 bind -n M-2 select-window -t 2
@@ -30,18 +36,18 @@ bind -n M-j select-pane -D
 bind -n M-k select-pane -U
 bind -n M-l select-pane -R
 
-bind -n M-S-l resize-pane -L 5
-bind -n M-S-h resize-pane -R 5
-bind -n M-S-k resize-pane -U 3
-bind -n M-S-j resize-pane -D 3
+bind -r h resize-pane -L 5
+bind -r j resize-pane -D 5
+bind -r k resize-pane -U 5
+bind -r l resize-pane -R 5
 
 bind -n M-z resize-pane -Z
 
-bind -n M-b split-window -h
-bind -n M-v split-window -v
+bind -n M-v split-window -h
+bind -n M-s split-window -v
 
-bind -n M-Enter new-window
-bind -n M-c kill-pane
+bind -n M-c new-window
+bind -n M-x kill-pane
 bind -n M-q kill-window
 bind -n M-d detach
 bind -n M-Q confirm-before -p "Kill entire session? (y/n)" kill-session
