--- a/home/.config/tmux/tmux.conf
+++ b/home/.config/tmux/tmux.conf
@@ -43,8 +43,8 @@ bind -r l resize-pane -R 5
 
 bind -n M-z resize-pane -Z
 
-bind -n M-v split-window -h
-bind -n M-s split-window -v
+bind -n M-f split-window -h
+bind -n M-v split-window -v
 
 bind -n M-c new-window
 bind -n M-x kill-pane
