--- a/home/.gitconfig
+++ b/home/.gitconfig
@@ -1,7 +1,7 @@
 [user]
   name = lomarco
-  email = ororr069@gmail.com
-  signingkey = ororr069@gmail.com
+  email = 119614090+lomarco@users.noreply.github.com
+  signingkey = 119614090+lomarco@users.noreply.github.com
 [init]
   defaultBranch = master
 [core]
