--- a/home/.config/sway/config
+++ b/home/.config/sway/config
@@ -7,7 +7,7 @@ set $up k
 set $right l
 
 set $term "foot -e tmux new-session -A -s def"
-set $browser "icecat"
+set $browser "waterfox"
 set $menu "wmenu-run"
 set $zathura "zathura"
 
