--- a/home/.config/i3status/config
+++ b/home/.config/i3status/config
@@ -7,6 +7,7 @@ order += "battery all"
 order += "volume master"
 order += "load"
 order += "wireless _first_"
+order += "ethernet _first_"
 order += "tztime local"
 
 battery all {
@@ -35,6 +36,11 @@ load {
 wireless _first_ {
   format_up = "W: (%quality at %essid, %bitrate) %ip"
   format_down = "W: down"
+}
+
+ethernet _first_ {
+  format_up = "E: %ip (%speed)"
+  format_down = "E: down"
 }
 
 tztime local {
